--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-color: aqua
 }
 .moji{
+    padding: 10px 20px;              
     border:  solid 1px;                             /* 枠線指定 */
     display:  inline-block;     
     background-color: rgba(255, 255, 255, 0.7);  
