--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
     background-color: rgba(255, 255, 255, 0.7);  
 }
 .syugou{
+    text-align:  center;    /* 文字中央寄せ */
+    padding:  150px;        /* 余白指定 */
+    border: solid 2px;      /* 枠線指定 */
     background-image: url(syugou.jpg); 
 }
 body{
+
     background-color: aqua;
 }
