--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@
     background-image: url(syugou.jpg); 
 }
 body{
-
-    background-color: aqua;
+    background-image: b;
+    background-color:darkseagreen;
 }
