--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .moji{
     padding: 10px 20px;              
-    border:  solid 1px;                             /* 枠線指定 */
+    border:  solid 1px;                             
     display:  inline-block;     
     background-color: rgba(255, 255, 255, 0.7);  
 }
