--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-#syugou{
+.syugou{
     text-align:  center;    /* 文字中央寄せ */
     background-image: url(syugou.jpg); 
     padding:  150px;        /* 余白指定 */
     border: solid 2px;      /* 枠線指定 */
 }
-#moji{
+.moji{
     padding: 10px 20px;              
     border:  solid 1px;                             
     display:  inline-block;     
