--- a/style.css
+++ b/style.css
@@ -3,10 +3,7 @@
     background-image: url(syugou.jpg); 
 }
 .moji{
-    /*padding: 10px 20px;*/              
-    border:  solid 1px;                             
-    display:  inline-block;     
-    background-color: rgba(255, 255, 255, 0.7);  
+    padding: 10px 20px;
 }
 body{
     background-image: url(tairu.png);
