--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-.name{
-    text-align: center;
-}
 body{
     background-image: url(tairu.png);
     background-repeat: repeat;
     background-color:darkseagreen;
+}
+.midesi{
+    text-align: center;
+}
+.hai{
+}
+.men{
+}
+.gai{
+}
+.syou{  
+}
+.seki{
+}
+.nen{
 }
